[gd_scene load_steps=8 format=3 uid="uid://dfodn8ia5n12i"]

[ext_resource type="Script" path="res://game/game.gd" id="1_cxpw7"]
[ext_resource type="PackedScene" uid="uid://d3k2sxndgmaue" path="res://ball/ball.tscn" id="2_bfhiw"]
[ext_resource type="Texture2D" uid="uid://crwb3wrl36uso" path="res://game/arena.png" id="3_jxpyf"]
[ext_resource type="PackedScene" uid="uid://dr8ssbcu7jksh" path="res://wall_bounce/wall_bounce.tscn" id="4_ks5le"]
[ext_resource type="PackedScene" uid="uid://5hrpxd7ci76s" path="res://wall_goal/wall_goal.tscn" id="5_tp3gb"]
[ext_resource type="PackedScene" uid="uid://cj3pwg27ip3fb" path="res://paddle/paddle.tscn" id="6_5cgph"]
[ext_resource type="PackedScene" uid="uid://dcktngg6b8fyk" path="res://hud/hud.tscn" id="7_wr3ym"]

[node name="Game" type="Node2D"]
script = ExtResource("1_cxpw7")
ball_scene = ExtResource("2_bfhiw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_jxpyf")

[node name="WallBounceHigh" parent="." instance=ExtResource("4_ks5le")]

[node name="WallBounceLow" parent="." instance=ExtResource("4_ks5le")]

[node name="WallGoalLeft" parent="." instance=ExtResource("5_tp3gb")]

[node name="WallGoalRight" parent="." instance=ExtResource("5_tp3gb")]

[node name="Paddle1" parent="." instance=ExtResource("6_5cgph")]
is_player_1 = true

[node name="Paddle2" parent="." instance=ExtResource("6_5cgph")]

[node name="BallSpawn" type="Marker2D" parent="."]

[node name="StartGameTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BallTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CloseGameTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HUD" parent="." instance=ExtResource("7_wr3ym")]

[connection signal="ball_escaped" from="WallGoalLeft" to="." method="_on_wall_goal_left_ball_escaped"]
[connection signal="ball_escaped" from="WallGoalRight" to="." method="_on_wall_goal_right_ball_escaped"]
[connection signal="timeout" from="StartGameTimer" to="." method="_on_start_game_timer_timeout"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="timeout" from="CloseGameTimer" to="." method="_on_close_game_timer_timeout"]
